...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Pomodoro-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="TimerViewController" customModule="Pomodoro" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap inside the counter to " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1u-Jo-B7q">
                                        <rect key="frame" x="0.0" y="0.0" width="163" height="18"/>
                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="start" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kyV-HR-1Lu" userLabel="ActionName">
                                        <rect key="frame" x="163" y="0.0" width="32" height="18"/>
                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="15"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V50-hZ-hTA" userLabel="CounterStackView">
                                <rect key="frame" x="20" y="240" width="560" height="120"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Xf-MG-AT7" userLabel="Minutes">
                                        <rect key="frame" x="0.0" y="0.0" width="266" height="120"/>
                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="100"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
...
                            <constraint firstAttribute="leadingMargin" secondItem="V50-hZ-hTA" secondAttribute="leading" id="cEx-A0-FJN"/>
                            <constraint firstAttribute="trailingMargin" secondItem="V50-hZ-hTA" secondAttribute="trailing" id="sgz-lP-4Da"/>
                            <constraint firstItem="V50-hZ-hTA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yAe-p8-UdF"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Pomodoro" id="Y2f-pZ-5iw">
                        <barButtonItem key="rightBarButtonItem" title="Set Timer" id="CWN-li-bEO">
                            <connections>
                                <segue destination="qPb-Pb-PZ7" kind="show" id="Eh2-r5-s3b"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <constraint firstAttribute="leadingMargin" secondItem="SxC-oL-GdO" secondAttribute="leading" id="GEg-cb-cUL"/>
                            <constraint firstItem="SxC-oL-GdO" firstAttribute="centerX" secondItem="nIw-pp-vxP" secondAttribute="centerX" id="Qm7-35-txh"/>
                            <constraint firstAttribute="trailingMargin" secondItem="SxC-oL-GdO" secondAttribute="trailing" id="TS2-ul-3vY"/>
                            <constraint firstItem="SxC-oL-GdO" firstAttribute="centerY" secondItem="nIw-pp-vxP" secondAttribute="centerY" id="gwG-iW-alx"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Edit" id="1UE-d2-wu5">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="mMj-6G-Srg" userLabel="Cancel">
                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="cancel:" destination="qPb-Pb-PZ7" id="6MZ-RZ-FUS"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="BJG-Co-9O3">
                            <connections>
                                <action selector="save:" destination="qPb-Pb-PZ7" id="iSB-NT-2pg"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
