...
            start()
        }
    }
    
    func start() {
        timer = NSTimer.scheduledTimerWithTimeInterval(1.0, target: self, selector: Selector("update:"), userInfo: nil, repeats: true)
        actionName.text = "reset"
    }
    
    func stop() {
        if (timer != nil) {
            timer?.invalidate()
            timer = nil
...
